fixed alignment and refresh bugs

--- a/RouteMe1/Base.lproj/Main_iPhone.storyboard
+++ b/RouteMe1/Base.lproj/Main_iPhone.storyboard
@@ -117,7 +117,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <containerView contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NgZ-LU-ecb">
-                                <rect key="frame" x="0.0" y="151" width="320" height="417"/>
+                                <rect key="frame" x="0.0" y="110" width="320" height="458"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <connections>
@@ -125,7 +125,7 @@
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eQL-qs-pFJ">
-                                <rect key="frame" x="270" y="113" width="30" height="30"/>
+                                <rect key="frame" x="270" y="72" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="+">
@@ -137,7 +137,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Destinations:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rb8-DI-2jT">
-                                <rect key="frame" x="20" y="76" width="116" height="21"/>
+                                <rect key="frame" x="9" y="76" width="116" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <nil key="highlightedColor"/>
@@ -145,8 +145,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="yeP-sc-l8A" firstAttribute="top" secondItem="NgZ-LU-ecb" secondAttribute="bottom" id="Nv3-rV-jAF"/>
-                            <constraint firstItem="NgZ-LU-ecb" firstAttribute="top" secondItem="cT5-Wu-CeE" secondAttribute="top" constant="151" id="ms1-mg-fQe"/>
+                            <constraint firstAttribute="bottom" secondItem="NgZ-LU-ecb" secondAttribute="bottom" id="3mq-eH-beu"/>
+                            <constraint firstItem="NgZ-LU-ecb" firstAttribute="top" secondItem="cT5-Wu-CeE" secondAttribute="top" constant="110" id="KXL-nm-h4O"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Input" id="zV9-ob-eX3"/>
@@ -209,9 +209,9 @@
         <!--Destinations Table View Controller-->
         <scene sceneID="R2n-C8-eMs">
             <objects>
-                <tableViewController id="oxr-U0-vwG" customClass="DestinationsTableViewController" sceneMemberID="viewController">
+                <tableViewController autoresizesArchivedViewToFullSize="NO" id="oxr-U0-vwG" customClass="DestinationsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="can-1b-hy7">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="417"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="458"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -263,7 +263,21 @@
                             <outlet property="delegate" destination="yNr-3H-cmP" id="cRM-Yc-7GS"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Activity Suggestions" id="IYe-2f-JyR"/>
+                    <navigationItem key="navigationItem" title="Activity Suggestions" id="IYe-2f-JyR">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="F9A-4c-hfl">
+                            <button key="customView" hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="CB2-HC-avp">
+                                <rect key="frame" x="233" y="5" width="71" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="yNr-3H-cmP" kind="push" identifier="next_city_segue" id="UoB-7u-4m2"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="searchBar" destination="3gA-D5-Z4j" id="cKo-NG-hOf"/>
                     </connections>
@@ -281,4 +295,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="ua6-js-1MZ"/>
+    </inferredMetricsTieBreakers>
 </document>
